--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=5">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=5">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=5">
-    <!-- (Opcional, compatibilidad antigua) -->
-    <link rel="icon" sizes="any" href="/favicon.ico?v=5">
-    <!-- (Opcional, si usas manifest/PWA) -->
-    <!-- <link rel="manifest" href="/site.webmanifest?v=5"> -->
+    <link rel="icon" sizes="any" href="/favicon.ico?v=5"><!-- opcional -->
+
+    <!-- Manifest PWA -->
+    <link rel="manifest" href="/site.webmanifest?v=5">
+
     <meta name="theme-color" content="#16a34a" />
+    <!-- iOS: abrir en pantalla completa -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pinta Post Championship</title>
   </head>
